# libyuni

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.txt  README.mdown  appveyor.yml  changelog.md  changelog.mdown  license.md  readme.md
docs/: codingstyle.md  codingstyle.txt
docs/changelog/: 1.0.0.md  1.0.1.md  1.0.2.md  1.1.0.md  1.1.1.md  1.1.2.md  2.0.0.md  changelog-to-html.sh
docs/html/: index.php
docs/html/seo/: seo.js
docs/src/: article.xml
docs/src/001-en/: article.xml
src/: .ycm_extra_conf.py  CMakeLists.txt  readme.md
src/benchmarks/: CMakeLists.txt
src/benchmarks/jobs/: CMakeLists.txt
src/benchmarks/jobs/queueservice/: CMakeLists.txt  main.cpp
src/cmake/: DetectInstructionsSets.cmake  common-settings.cmake  devpack-standard-imports.cmake  devpack.cmake  message.cmake  modules.cmake  system-information.cmake  target.cmake
src/samples/: CMakeLists.txt  readme.md
src/samples/audio/00.loadandplay/: 00.loadandplay.cpp  CMakeLists.txt
src/samples/audio/01.movingemitter/: CMakeLists.txt  main.cpp
src/samples/core/: CMakeLists.txt
src/samples/core/colors/00.rgb/: main.cpp
src/samples/core/colors/01.rgba/: main.cpp
src/samples/core/events/00.simple/: main.cpp
src/samples/core/functional/: CMakeLists.txt
src/samples/core/functional/00.fold/: CMakeLists.txt  main.cpp
src/samples/core/functional/01.views/: CMakeLists.txt  main.cpp
src/samples/core/functional/02.kanaconversions/: CMakeLists.txt  main.cpp
src/samples/core/getopt/00.simple/: main.cpp
src/samples/core/getopt/01.varioustypes/: main.cpp
src/samples/core/getopt/02.remainingarguments/: main.cpp
src/samples/core/getopt/03.paragraph/: main.cpp
src/samples/core/getopt/04.customhelpusage/: main.cpp
src/samples/core/hash/00.md5/: main.cpp
src/samples/core/hash/01.md5.fromfile/: main.cpp
src/samples/core/logs/00.simple/: main.cpp
src/samples/core/logs/01.logfile/: main.cpp
src/samples/core/math/randomnumbers/00.simple/: main.cpp
src/samples/core/math/randomnumbers/01.interval/: main.cpp
src/samples/core/math/randomnumbers/02.table/: main.cpp
src/samples/core/math/randomnumbers/03.tableplusrange/: main.cpp
src/samples/core/process/: CMakeLists.txt
src/samples/core/process/01.time/: main.cpp
src/samples/core/process/program/: CMakeLists.txt
src/samples/core/process/program/01.time/: CMakeLists.txt  main.cpp
src/samples/core/singleton/00.simple/: main.cpp
src/samples/core/singleton/01.phoenix/: main.cpp
src/samples/dbi/00.simple/: CMakeLists.txt  main.cpp
src/samples/devices/00.monitors/: main.cpp
src/samples/extra/markdown/00.simple/: main.cpp
src/samples/io/: CMakeLists.txt
src/samples/io/00.iterator/: main.cpp
src/samples/io/01.threadediterator/: main.cpp
src/samples/io/02.root-directory-from-argv0/: CMakeLists.txt  main.cpp
src/samples/jobs/00.basics/: main.cpp
src/samples/marshal/: CMakeLists.txt
src/samples/marshal/00.json-export/: CMakeLists.txt  main.cpp
src/samples/messaging/: CMakeLists.txt
src/samples/messaging/00.simple.rest.server/: CMakeLists.txt  main.cpp
src/samples/parser/: CMakeLists.txt
src/samples/parser/00.calculator/: CMakeLists.txt  calculator-grammar.cpp  calculator-grammar.h  calculator-grammar.hxx  calculator-grammar.nodes.h  calculator.cpp  calculator.h  calculator.hxx  calculator.ygr  generator.cpp  main.cpp
src/samples/parser/00.json-parser/: CMakeLists.txt  main.cpp
src/samples/parser/01.json/: CMakeLists.txt  example.json  json.cpp  json.h  json.hxx  json.ygr  main.cpp
src/samples/threads/: CMakeLists.txt
src/samples/threads/00.spawn/: CMakeLists.txt  main.cpp
src/samples/threads/01.every/: CMakeLists.txt  main.cpp
src/samples/threads/02.async/: CMakeLists.txt  main.cpp
src/samples/threads/02.thread/: CMakeLists.txt  main.cpp
src/samples/threads/03.condition/: CMakeLists.txt  main.cpp
src/samples/threads/03.every/: CMakeLists.txt  main.cpp
src/tools/: CMakeLists.txt
src/tools/parser-generator/: CMakeLists.txt  main.cpp
src/tools/yuni-config/: CMakeLists.txt  main.cpp  program.cpp  program.h  program.hxx  versions.cpp  versions.h  versions.hxx
src/tools/yuni-docmake/: CMakeLists.txt
src/yuni/: CMakeLists.txt  Doxygen.txt  doxygen.h  string.h  yuni.h
src/yuni/algorithm/: luhn.cpp  luhn.h  luhn.hxx
src/yuni/cmake/: algorithms.cmake  core.cmake  dbi.cmake  device-display.cmake  documentation.cmake  extra-uuid.cmake  graphics-opengl.cmake  ldo.cmake  marshal.cmake  media.cmake  messaging.cmake  net.cmake  parser.cmake  platform.cmake  test.cmake  ui.cmake  vm.cmake
src/yuni/core/: any.h  bind.h  bit.h  boundingbox.h  charset.h  dictionary.h  dynamiclibrary.h  event.h  exceptions.h  flags.h  flags.hxx  foreach.h  fwd.h  getopt.h  iterator.h  logs.h  math.h  memory.h  noncopyable.h  nonmovable.h  nullable.h  point2D.h  point3D.h  process.h  quaternion.h  rect2D.h  singleton.h  slist.h  smartptr.h  string.h  suspend.h  svector.h  tribool.cpp  tribool.h  tribool.hxx  unit.h  uri.h  utils.h  variant.h  vector3D.h
src/yuni/datetime/: timestamp.cpp  timestamp.h  timestamp.hxx
src/yuni/dbi/: adapter.h  auto-commit.h  column.h  column.hxx  connector-pool.cpp  connector-pool.h  connector-pool.hxx  cursor.cpp  cursor.h  cursor.hxx  dbi.h  error.h  fwd.h  row.h  row.hxx  settings.h  settings.hxx  transaction.cpp  transaction.h  transaction.hxx  utils.cpp  utils.h
src/yuni/do/: do.cpp  do.h
src/yuni/io/: constants.cpp  constants.h  directory.h  error.h  exists.cpp  file.h  filename-manipulation.cpp  filename-manipulation.h  filename-manipulation.hxx  io.h  io.hxx  searchpath.h
src/yuni/job/: enum.h  fwd.h  job.cpp  job.h  job.hxx  taskgroup.cpp  taskgroup.h  taskgroup.hxx
src/yuni/marshal/: document.cpp  document.h  fwd.h  object.cpp  object.h  object.hxx
src/yuni/media/: emitter.cpp  emitter.h  emitter.hxx  loop.cpp  loop.h  playlist.h  queueservice.cpp  queueservice.h  queueservice.hxx  source.cpp  source.h  source.hxx
src/yuni/net/: errors.h  (+10 more)
(+691 files in other folders)
